# ChangeLog for media-gfx/gmic
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gmic/ChangeLog,v 1.36 2013/05/03 08:38:54 radhermit Exp $

*gmic-1.5.5.2 (03 May 2013)

  03 May 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.5.2.ebuild:
  Version bump.

  01 Apr 2013; Tim Harder <radhermit@gentoo.org> gmic-1.5.5.1.ebuild,
  +files/gmic-1.5.5.1-makefile.patch:
  Link against libavutil (fixes bug #463826).

*gmic-1.5.5.1 (30 Mar 2013)

  30 Mar 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.5.1.ebuild:
  Version bump.

*gmic-1.5.5.0 (10 Mar 2013)

  10 Mar 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.5.0.ebuild:
  Version bump.

*gmic-1.5.4.0 (29 Jan 2013)

  29 Jan 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.4.0.ebuild:
  Version bump.

*gmic-1.5.3.0 (12 Jan 2013)

  12 Jan 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.3.0.ebuild:
  Version bump.

*gmic-1.5.2.5 (09 Jan 2013)

  09 Jan 2013; Tim Harder <radhermit@gentoo.org> +gmic-1.5.2.5.ebuild:
  Version bump.

  08 Dec 2012; Tim Harder <radhermit@gentoo.org>
  files/gmic-1.5.2.2-makefile.patch:
  Don't build example library (fixes bug #446460).

  08 Dec 2012; Tim Harder <radhermit@gentoo.org>
  -files/gmic-1.5.0.7-ffmpeg.patch, -files/gmic-1.5.1.7-makefile.patch,
  -gmic-1.5.1.9.ebuild, -gmic-1.5.2.1.ebuild,
  -files/gmic-1.5.2.1-makefile.patch:
  Remove old.

*gmic-1.5.2.4 (08 Dec 2012)

  08 Dec 2012; Tim Harder <radhermit@gentoo.org> +gmic-1.5.2.4.ebuild:
  Version bump.

*gmic-1.5.2.2 (13 Nov 2012)

  13 Nov 2012; Tim Harder <radhermit@gentoo.org> +gmic-1.5.2.2.ebuild,
  +files/gmic-1.5.2.2-ffmpeg.patch, +files/gmic-1.5.2.2-makefile.patch:
  Version bump.

  02 Nov 2012; Tim Harder <radhermit@gentoo.org> -gmic-1.5.1.7.ebuild,
  -gmic-1.5.1.8.ebuild:
  Remove old.

*gmic-1.5.2.1 (02 Nov 2012)

  02 Nov 2012; Tim Harder <radhermit@gentoo.org> +gmic-1.5.2.1.ebuild,
  +files/gmic-1.5.2.1-makefile.patch:
  Version bump.
