@@ -2,42 +2,23 @@
 Hash: SHA256
 
 AUX gmic-1.5.2.2-ffmpeg.patch 716 SHA256 068c3bbb808b8e68a8826203e124d8cc86c937b8c77bc998225510abf6080e1a SHA512 9697d41c7f0fb422eb70d9bca38e8822692d95be14c4c337bea3e02cae1ad039a4b1c007536bdda669ff95c30980d13183423504ae70be3da6da53de146b0c1a WHIRLPOOL 3e94e98a0c375573a3a936a281f3b28c0800d331189f21e6afa1d0c2b2b257a7b56e10419c2362eff726d0bdfb93d902d09e14cce76ae41d779b2ae208c80328
-AUX gmic-1.5.2.2-makefile.patch 4689 SHA256 bfc15f13d79b0be044add9f73fc927c63b5f8986f7565cb0be6bdc0dca55ffff SHA512 9794849497de463f7bebcbd4d68f2471adbfc8477edec50843aea5ad99e13fa8e9135c12146c1d8b9a5f9b0faf113659cf9f5fb2c74e540ab6cf4c63ea9af5f0 WHIRLPOOL ce0dddd2c67b40e6a184700107680551de7402f2a543b213e860f3b6713e5376f414f68406f8b20fec9b9084ca54525934570616a5716632794eca6b065033d1
 AUX gmic-1.5.5.1-makefile.patch 5313 SHA256 9871db2facbf096643727b2a38f3799ab9ebf33521ad8e25bc4f2c6099290626 SHA512 aaeab86291892d52170557dddf28b9879121a84bfa63ae7c4105e4e542c2c99c6f3f29f291725dd9221c58d88be4dce9e02da3750a9936f29253f04092f6d04d WHIRLPOOL cb7b8d5012bd637f4574b491369215ef4881974fa61f1109abd9b4722eae53d229c81bae017439cf70c5db1a56c97dcb4032e918d11bf4feb8a119028c733658
-DIST gmic_1.5.2.2.tar.gz 2187885 SHA256 e5e188e169bf9eebf47cd83d901ec2b44b0d5e5a06eadd734d51edce2202886d SHA512 757b331664178d857a241bf7a8ad8f3bafbbcf946000d0fd71cb717aa38210e34f4bf1e0df3c981fda8550722c7b6a2ee28c6a2d5d170d231127d5a0bc4fe6fe WHIRLPOOL c69e60e76ae354c258121461c334f40c34d32f4888bd41f2dfdfca6305b7bbf964a8c53a69fb6c782c51e33d814f5e498690c485bad1f8a10189dbb6c64363f8
-DIST gmic_1.5.2.4.tar.gz 2203118 SHA256 489f81653e3a7a00b5fa10d7d59c35de6a24de3ec24b57b4f6e4498743057c49 SHA512 ffa31dd118a847aefa2a9578803bbae1f3bdf65ad62de36ff68b8afc4e8dbe1459178b1552c2b84c4cdfad85c4bad9e3fd6fdb5d5f2bce713db655d69a48da29 WHIRLPOOL 70dbeb5b9e77fed1b191034f5395764914689117a71cd1d938ad78cd15ee00830936296b6c8531c3958b39274f2797135a0bc369d2c21c46e1e425c2d651bba4
-DIST gmic_1.5.2.5.tar.gz 2215262 SHA256 3b7a00898e6e06f1d5bdb0566ccd9422195135e297d25dd056a619c7394cb983 SHA512 bd76ac164f89f30cdcbcdda97f6816a661dd28b5f7364b68f61bdd6d1252e2bfb4a9fafc27d5f0720709c50421f80dbb8f899a0dfc13c2ed54cfbed02346ff73 WHIRLPOOL e8f64e1f8b1a3ca7e886faae20b88952a8d8ff65af870fd39a1ae5643a776a3fc0c531730f645ae8c24020cc58e526e941aa9f6784686217ba8622d2bbbe62d3
-DIST gmic_1.5.3.0.tar.gz 2217350 SHA256 667c5b065780362cb7a56593a518180e7fb47f19104898d3dce15f313084334f SHA512 5a72a5a4e470eb4c0c3ed1c3e59a63a122e0407bdcf0e7be5b2bb884f7fac156631e180769e0775cc28c250410fcd304c1b5031273421d17c0cffe598c5d3ab4 WHIRLPOOL d178d2792b24f3772624357b4827dcf6cb865e7a197dcf14b76421ab08b1999372e9799066f77037589e6181aaad84b2aa11e39baab6f6eeeaf681323ad989cc
-DIST gmic_1.5.4.0.tar.gz 2215090 SHA256 01241d48d567e1636b54514ab7237de943b8306f43250bf1d78d310b44cee5bd SHA512 52569616e754edfb451dfff999226b5ffa22feb9898c63df0c9c2681ca37e199593ef871c587b3ed3aaee00fc6c56040445dc747a1c62856116240a292be2aad WHIRLPOOL 09bb19bc4927fa3e45b35c4520be15dab4e0061c1d74c853ab46292220bac924909554e7b76440c84a038717342763971f1566dfcbd5c49843926d33f57402b7
-DIST gmic_1.5.5.0.tar.gz 1674452 SHA256 31b63c13b27ab8925ef1b6e4fd93851b517bdf3301956fb44e0ed64793a1c415 SHA512 70302c978409b6137110e0df4540d594b6c44aeda38ce591a53879b14ffc4fe61971b098bbe2929c244f4d12f3b64af42331d8dcf801664d28ed56b6e38d81fc WHIRLPOOL e1f8e7e63df454f2d8b6511dbf42b1f9328683a41aa3083300bc0e314d31b4578a071c7df702fed04932d1b4544a616944cf20a8dd93b7805ab84c64e867ddb5
 DIST gmic_1.5.5.1.tar.gz 1689227 SHA256 3079b203f524bdf1736994abbd03d66d586d6fd2f0c0af98ad3ffe563fbd9613 SHA512 532e9f21692aa36872dbb2c9ca798ccac187b5fda02ca9d36f01ef28bfc104e43dec312afa448779282da52b1766ca0c3c645ccf962a938d55c53d72f366a8f4 WHIRLPOOL 18f8fbd6aff67dcbfa58fce59ac1ebf3856113084a238aa52fc03f24f16d1d4acd5e6d97c32813576094c48b4008fa616cd7be87ebd2c2eb11e7f89ea54b508e
 DIST gmic_1.5.5.2.tar.gz 1683717 SHA256 4e1ff3dcd7dc79dcc7f8ac92cae49951854aea283751a83e90b9510de972382d SHA512 a0f2175aef8d93fa56bbc923793d59c716399231afedf391fcb1a9525ac2397ccb6ce1a542928f5c08d12ebd06af26ac5aec17fe7ae0d4c04e215bfac4ca586e WHIRLPOOL d59d4ab55b904ade2da5ab9ffb29329894cd3d8c009d5ed9f039b989f737502085e352f3a315cf1f287c60004a054e58955b2a189235497f70d25d48c48a2851
-DIST gmic_reference-1.5.2.2.pdf.xz 14980944 SHA256 3d80b11f55f22c2c9b417c1e056c85a85bd5f8f6f322558fd6aaaa145f1a7651 SHA512 f801a37fb149879fd28f2f3939260d76205f226ac47ea86956d57bd8e1dbe079925cdb9a3ce8c60b08f57a9cf7b27462ffbd81803dac6f8276fa03ec7917a5f0 WHIRLPOOL ed612f38e50a9bf9d44ed7c018fdb284eeffabf930ab7e2deb28d9970b016ccdd3ae55c4748adf97f095583fe5bcaaa5d42b5ae951c12e0e6cec548500cddf8f
-DIST gmic_reference-1.5.2.4.pdf.xz 15101780 SHA256 b712c8780b3592c50d1bbc52b914b63e08f97b9c647b8c64fd1b9bc3d07fd9a6 SHA512 49f3f1ec744ba5db7c2585d7feb0bfba4d40b00ed0571d02fffc3662480ecc16b4ac7f3ae3392b4307dc470cea1f42913610e6320125e84d2785e9dc9632739e WHIRLPOOL 60571ce67e485608491b02ce12ca12c53a94843745a0e43eb75e1f0f3d73207f685cec5ec0837854826b9625ec7aa736dbb17b533053135c5477b90951514d4c
-DIST gmic_reference-1.5.2.5.pdf.xz 15078948 SHA256 37108d75e040be910ae77cb913ae10cf30bb12c4114cb62e2ea2739bf7c33165 SHA512 95112fc810280aad775bf3977c7e7e4bb9d3bea35a59e9fd542da15363ee6720651869d27e024be9fa4e50836e0a4de3197f36a71283a6cd7584233fcfb8c385 WHIRLPOOL a1744e5c2484c48cc7c383c23a62634e75b2e1042c11fb6bd5cdf43c135988d4ed0ede1c37dcbf0215ec0e3a5add3126e83a40d38ecd629564c34973ec775c04
-DIST gmic_reference-1.5.3.0.pdf.xz 15083988 SHA256 c4c904791a75db96dc5c9293987c106b27dd08f4ab72ccfa54857094145cdb4e SHA512 8a59cd3f18e2730b208d193c3791f4d8873336eae76695fe68f6a0eb188e605157fc6f70fea0c433b1c6ca171232729238824c03b17438acc54e5f68646778cc WHIRLPOOL 845ef9bc08a1fc22aba13d57796f0d1939c82cff1627e2899cad0ad081b3404ddffd5ecd69cd733ae2fa38ac04962ab09fc15f0b80c02c26835da09c52cdcfb4
-DIST gmic_reference-1.5.4.0.pdf.xz 14736428 SHA256 99493779d01da4ad94e05e074a870f0ce868fb7ba09ed5e50b3d9495fd8b58dd SHA512 6274192817d7bbf9cdf6e692ee1c7de54e9b370f69993b50e58173b89f0762de105a066f8a21bf3b61ff466594c184f50cab5b76f366f9e0a18394b525d939d4 WHIRLPOOL 076c449483f438144dc10919ee6faabe1551ed47c21a66df8a8b49ad115cae8c101f8f80f1a4b5ddcccfaa4e0601740b5cb4960361a92ee8e6b93ba71fd9e3cf
-DIST gmic_reference-1.5.5.0.pdf.xz 15312880 SHA256 4518a1485d62497d5c07bf31982c02e777d50d3028cc17dc7328a12884a0ca79 SHA512 1b9e8a119911046a01eb10c862877412801096770e9ba0c0884ee8ea876200f82a624b87bdd7e0ffc5fa49208fcfd5093884fdac766e9ef34100727db7b26dd2 WHIRLPOOL f430a2c3f54481718d26eb8b2142d521c9d949d97a9acbfc260aaeb3cd7c132414b77bdca39d914625568199c34184329065df9816050b9c918e9488ce9522a0
 DIST gmic_reference-1.5.5.1.pdf.xz 15343940 SHA256 c8649d36b87c24743f3afb0f0b0cb03699d65b7eac86d5ee1c33e36ebb76e1e2 SHA512 becec9f9d7ba8b716eda85aab49c9d091cdbbf7e643911639b21a15e9c9b10e450316094a3c5f52b407c73ca31c4675a25dc318360716cbca7ac593d686b44dc WHIRLPOOL ecf048a48d18eb4f4f736621e0e6f08f98e4c9513ab27e4e323b889a40c694c4830312e8add94aa8de640de6b129b5d6158beff61f695cee59abff1130bd3a2b
 DIST gmic_reference-1.5.5.2.pdf.xz 15384132 SHA256 d0fd745ec708ccd4c63e817a9de20833bfa64c5d3365356bc680a2be05814e80 SHA512 eaeebef81d7df2ed98d52a0519161edba570ae1002d1cf9601f4dc672aef51a42a18a3d7c9b6a8c0872e16574d82586f9d080dad7ad68c151cd9ae3087156c1e WHIRLPOOL eb97ab3508d57313d257fe90f9dde0649b4787664ac17cde3e5fc354b2bf53eb1bcd5bd3c6cb79c92f69d80a4fa0b0a2a703f83fd3e4773844a243b0eaa146f4
-EBUILD gmic-1.5.2.2.ebuild 1992 SHA256 f258e75cdeac769e3ff0dc06ef4c567a3ae439a2a918e566edbb2e3c88afb956 SHA512 5a3bfe2ab280c918ca6aae091f44172ba8a61aa7d0b296933403979d7602ba08807d97be87ba7ceb41cec80f78bd30e5c563cb19800acf835769ce3777492961 WHIRLPOOL 343eb97ad4766eeea9857332ae78f2107475e7e7878e0b888fd0c3d10cfcef03840f75f666ca294d60e9eca051484833e88c16d6e0fe2d7c840e3cb21be9833a
-EBUILD gmic-1.5.2.4.ebuild 2041 SHA256 b1ff9ce2c6ab6f572749f0203039233a9d1baa255e0e71d1d733a4b688209266 SHA512 11ebdcfbe78285a03a47e9bfbdebd32d66a1bbef62692f71d410afba7d5c1d70b4202a430cb3ed38a23f6993ead6f8ec86f3900659506d23973f9ec21ce3a712 WHIRLPOOL 769faf3b2ef78bcfab99b44c1bbae7208e82bfb71e16120294abe3e60db2bab14685e7e8a618246c3a3dbc47948a842452c89a844b687ade3568152c4c41a0e9
-EBUILD gmic-1.5.2.5.ebuild 2041 SHA256 c90c40d373f4f843f8c7a5f30e422ba24cdf3cae39ccfee3812276158a62ad45 SHA512 dd2368c66b6f9e99712c17228f616ac44dcbf95cf41dd834cad768cd71da060524ff08fd3d237976c8308343aa8d76efea6c366d5d0e62cc3e9b3e53cf4011a5 WHIRLPOOL f2937b1ee17428ba54c3cb880e23d33b57a8741353aa4f64ae8897ebf5ed4a5af3ba8c960b881b4ea100e78518c54fb479712b654ea6d0763ecb4cc3baf9b1fd
-EBUILD gmic-1.5.3.0.ebuild 2041 SHA256 23dee2e1ba5919a2e3483d154d7d650af7cab7ff76f5fe6b4aa9834af4e25c7e SHA512 152c675ec47cbce218e674dcd8f6fbccdf6ed63dc42c55bb6447c4ff061aa0fdfabeb553545ff12d350833285461c56bd4ae4d58c70347499ba0cdcb7bab10f6 WHIRLPOOL 7cfd271d43e4584825a8d20f1e8486a06e51ac1f58b046c4759cd5638974d5f163e742e645c2f4eccc83f702bfdca061d80e0d03119a5597cb315f0b51040752
-EBUILD gmic-1.5.4.0.ebuild 2039 SHA256 4c2af9d5b0a4edd4853393136bac2bc9a1aaeb204f26320dbd07d718703f4380 SHA512 8bb4134c6e9d686f0cb14c4c5743986bc5b82e77c8425e2c5f608646de72de653c4b6e716e38f62f6291f45c7dbd8074ce23dc71f1a92bfe51e7595489ca2fa2 WHIRLPOOL 2b8bb570d8e64893a0bb882172b3fe54056a46f376c6b5c62c3384daccd52ca6a63a2bfadca3bcd5e512ba68aec429e3bc4bebc974946800d3c419635012d093
-EBUILD gmic-1.5.5.0.ebuild 2039 SHA256 bd59780b4601c19297ad14894ae022918caa0d0ccd36c0176bfdc27e1b626c12 SHA512 2a8ed57022f9bc2540293fdbacc96803233b2b2220d6c90b33b839556057b93310fa6ebda7168b0fdd878b7e03ffac80a5d899ceb8892ec3d6719822cb5e9699 WHIRLPOOL 9de893474ffc86cc1c4b08ead559916cf2badcf2be853b3d890f4729c9fcc6b1a6db49e6768b8b739d63c3d3d77ad58b124da9c8c576568b6b43b4d11fcf012e
 EBUILD gmic-1.5.5.1.ebuild 2030 SHA256 15953b873974ad6bdd490f69de2cae8489def7f652c96376449056b3b9abb400 SHA512 2403dbd95ec0273509e1277d0eac61a525f05f2ccc8ac7d0d0474a1f251996dda12111f0211f272b8ed3049fea9afebc0d49c99e95c3d3bc4c6595961b1102ca WHIRLPOOL 3b62144036efce0217f6ffbf97f8a408b5b1313f025d173d93f44dde272d9e2d5ac790f42c51a749431bff57e6bd75140f1ee52d0fb60f4258b495c2d5ad197b
 EBUILD gmic-1.5.5.2.ebuild 2039 SHA256 3dcfe6b2e4aa5420aa010608fbc5f4da54781a0c3103a7875d60c3f5cdc20f0e SHA512 d5227309021823fa5f7518624d5835f0c01bb49eb27eee70caafe8fcf6a0636bb2d304382dcc2301c6b0eb33c2e43f9da35597ad49a1907365cb3d23bd280b22 WHIRLPOOL 56ca7ae11765722a64791ee8def149b332d088b41050a6f1a250c07cd9c2b7873e3b395f667d328f2c46fa687bfd885de6db813c8037c3de2f5e9df094f36e35
-MISC ChangeLog 5001 SHA256 a1c36e440e62a2aa041689f6fb11fe8474e1f88b67e51c7e0430da2bbf9963c6 SHA512 b7ee4687d44189733b71a642b42e27484370bd2a7430e19e7c3116c86ea72af4e4e0f6dbec16a314ecebd8945700bccd9a4d2e61ec2b38fde5882358a06b299e WHIRLPOOL 242633884314c706e717df11064680340814b02f15b624651807741ddc65f44663e8d910a4b3dfccc6f28d142c044483ec8d8cf3cec61eca9ba8c0cc50cb3819
+MISC ChangeLog 5239 SHA256 2901f53df91bcf2e8775575c99a404e6e84267760dcf5bd47fe156e853bc1b8e SHA512 a033db6718a56b04aece635e4332d4b21d1ea228e4047bdb7502b1d8b1ec0117e6dbcdecc820a719d8de3b8e38b02ad489f08d4a598ce17d5c67b87aa4acf7a6 WHIRLPOOL 8969f77ac5c22fab85fd5ba5162a68926d84d703bfbbbcd55937bcedeba004967344a02923b061b7935ecdb78b68965b6e26fb57617cc6d369c7ac82335d7638
 MISC metadata.xml 473 SHA256 def06af4d0283b01f9313231ff05df286129ff57afbcac23fcc7c45d8f735a6c SHA512 4bd720129471c24a6b71e32f11054d96bd2eefb3316489806a06b8deed45e5544fe1c74a73c129ec90fe30c8a4c0646c50e6690717046ad93255771627588f32 WHIRLPOOL 9a356f4c399b7a6fdf217b2dbeaeb4fd40dffc080b86c0ad913690c0b0007aaad52ea79d3b7b5b21591432c99a1e59ed02ead94e2578f1915afe2ee0c9f7d090
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRg3efAAoJEEqz6FtPBkyjE54H/296FED9J8h+kzjMZqwB7Idh
-5ICq0Lm6W8KAVT1DAgWrlBTGBBKT7VTlNI576Jm3VtppQy7curkdflSydlESXnFK
-iCL8fWdLHzLT1uUDPd72ufY4Fsey1nkwU7qIwKcSIioD0Y5T7aaFTIRRdMwWWDLf
-g10Xr/rt+rSUETZ/Kqkjjl2PiM9ZQYanE5ZDX10Kf11g+LNe+ObYHj598PeeoRp7
-0QJAxdv9iMNfGXgiIA5q6PrcUOTwl0qC5iNJC8gCpj622Fno+Z20ahJbHzjsT2Td
-OEX4cCFMl24cfeD2YNYpr4/c7FzYT2iC9IehSljNDQXceSI3bu15aRKuRzfQs5Y=
-=j/Ga
+iQEcBAEBCAAGBQJRg3krAAoJEEqz6FtPBkyjQYkH/R4pS32cdV5xujUlRAACwV4O
+Cfs/oZVNHAluvfcplOPiOcpRGJZ/KzIswoOsjN2qx5nAjWXF15jujXJ8ATQ/Wu8a
+vGb8mpTLtYHBgubAikWUUhP816uv4fmTQYZRTpmTAH7SjHaL1QaodDKTCfTEtaHo
+nBorfvGVliNcHRSSUaTjYPUpcDIJ550wTS66GsuK1y+63nuqmQTtAvervIVzr35h
+KwfjY9yQ4i+nmqv9BzAxza/OoEcKQQ7Hyi1YkQbFN3m1BdEVFJ3JGqCcRqoltg7/
+Izf//7AJbya/Dcw4i0QitHBCWwE7zZ64CkTv2SWnxlyqqBCH5HIDex0JkRWjFWQ=
+=Mu45
 -----END PGP SIGNATURE-----
