@@ -2,30 +2,20 @@
 Hash: SHA256
 
 AUX gmic-1.5.2.2-makefile.patch 4407 SHA256 db8acb3399e38a72aeee16d537f242d77b03ebd94987f47c9bc9cc3b2cea1c69 SHA512 83aed5494640a7e7e8db7500fe7dd0e46fd29b788caafde9c715c6c0de4f77a0137fed07a2c3606e8845d6cf66dcea9d68e57bbba03d509ec90dd2bb2f41f37e WHIRLPOOL ffefa2fb0187c7b8950e58630a4bd414a46480c037113e4b05ebbae6dfe3a339e2aada3f89065405b117ad876a51b3a2442a8c2c32430b62a8c354a8d74f122a
-DIST gmic_1.5.2.2.tar.gz 2187885 SHA256 e5e188e169bf9eebf47cd83d901ec2b44b0d5e5a06eadd734d51edce2202886d SHA512 757b331664178d857a241bf7a8ad8f3bafbbcf946000d0fd71cb717aa38210e34f4bf1e0df3c981fda8550722c7b6a2ee28c6a2d5d170d231127d5a0bc4fe6fe WHIRLPOOL c69e60e76ae354c258121461c334f40c34d32f4888bd41f2dfdfca6305b7bbf964a8c53a69fb6c782c51e33d814f5e498690c485bad1f8a10189dbb6c64363f8
-DIST gmic_1.5.2.4.tar.gz 2203118 SHA256 489f81653e3a7a00b5fa10d7d59c35de6a24de3ec24b57b4f6e4498743057c49 SHA512 ffa31dd118a847aefa2a9578803bbae1f3bdf65ad62de36ff68b8afc4e8dbe1459178b1552c2b84c4cdfad85c4bad9e3fd6fdb5d5f2bce713db655d69a48da29 WHIRLPOOL 70dbeb5b9e77fed1b191034f5395764914689117a71cd1d938ad78cd15ee00830936296b6c8531c3958b39274f2797135a0bc369d2c21c46e1e425c2d651bba4
-DIST gmic_1.5.2.5.tar.gz 2215262 SHA256 3b7a00898e6e06f1d5bdb0566ccd9422195135e297d25dd056a619c7394cb983 SHA512 bd76ac164f89f30cdcbcdda97f6816a661dd28b5f7364b68f61bdd6d1252e2bfb4a9fafc27d5f0720709c50421f80dbb8f899a0dfc13c2ed54cfbed02346ff73 WHIRLPOOL e8f64e1f8b1a3ca7e886faae20b88952a8d8ff65af870fd39a1ae5643a776a3fc0c531730f645ae8c24020cc58e526e941aa9f6784686217ba8622d2bbbe62d3
-DIST gmic_1.5.3.0.tar.gz 2217350 SHA256 667c5b065780362cb7a56593a518180e7fb47f19104898d3dce15f313084334f SHA512 5a72a5a4e470eb4c0c3ed1c3e59a63a122e0407bdcf0e7be5b2bb884f7fac156631e180769e0775cc28c250410fcd304c1b5031273421d17c0cffe598c5d3ab4 WHIRLPOOL d178d2792b24f3772624357b4827dcf6cb865e7a197dcf14b76421ab08b1999372e9799066f77037589e6181aaad84b2aa11e39baab6f6eeeaf681323ad989cc
-DIST gmic_1.5.4.0.tar.gz 2215090 SHA256 01241d48d567e1636b54514ab7237de943b8306f43250bf1d78d310b44cee5bd SHA512 52569616e754edfb451dfff999226b5ffa22feb9898c63df0c9c2681ca37e199593ef871c587b3ed3aaee00fc6c56040445dc747a1c62856116240a292be2aad WHIRLPOOL 09bb19bc4927fa3e45b35c4520be15dab4e0061c1d74c853ab46292220bac924909554e7b76440c84a038717342763971f1566dfcbd5c49843926d33f57402b7
-DIST gmic_1.5.5.0.tar.gz 1674452 SHA256 31b63c13b27ab8925ef1b6e4fd93851b517bdf3301956fb44e0ed64793a1c415 SHA512 70302c978409b6137110e0df4540d594b6c44aeda38ce591a53879b14ffc4fe61971b098bbe2929c244f4d12f3b64af42331d8dcf801664d28ed56b6e38d81fc WHIRLPOOL e1f8e7e63df454f2d8b6511dbf42b1f9328683a41aa3083300bc0e314d31b4578a071c7df702fed04932d1b4544a616944cf20a8dd93b7805ab84c64e867ddb5
 DIST gmic_1.5.5.1.tar.gz 1689227 SHA256 3079b203f524bdf1736994abbd03d66d586d6fd2f0c0af98ad3ffe563fbd9613 SHA512 532e9f21692aa36872dbb2c9ca798ccac187b5fda02ca9d36f01ef28bfc104e43dec312afa448779282da52b1766ca0c3c645ccf962a938d55c53d72f366a8f4 WHIRLPOOL 18f8fbd6aff67dcbfa58fce59ac1ebf3856113084a238aa52fc03f24f16d1d4acd5e6d97c32813576094c48b4008fa616cd7be87ebd2c2eb11e7f89ea54b508e
-EBUILD gimp-gmic-1.5.2.2.ebuild 926 SHA256 517c20f87c617a92ac48739c9a4a960c20d7cb8034d8659c7c953b77e84b604c SHA512 bf782682a383f8e34818b5402d270c175b9e54089ae24604fe65175e5f6c8ee8ffa69f3072b57dc46c0e0816f88096c556632b62d869f58757808b71dd0e158c WHIRLPOOL ddc4ed3ae6cf10fbcd54501f96f6d37394a58f9c9c0a3fc5b1084dc69aaf696581f1f2ed7f674e030607172f1d83f07b16259cb75f958df22e7a7bb629386f3a
-EBUILD gimp-gmic-1.5.2.4.ebuild 949 SHA256 ac7f8dd6fed545c2c8fcfc20d73ce5bbd2b5783e2fb5b01d958d3e844eb32718 SHA512 9d5cd0ad9cce353c1f323e84af8f3d9834ffe108acde1236bd389aa220845880aa8ee0544e409834364343963c1ca27b1665045b23f0643e9c16dff87bb35e43 WHIRLPOOL 360367a858861d328d6200bfdadc82333658f8b1935490b83f3e61d5a8a47f0eb609c8bc398fc6d0734a789c430469074e4db56c7efc545b456aa428f3b81474
-EBUILD gimp-gmic-1.5.2.5.ebuild 949 SHA256 bd1e30fb50f4dc2962b40af9f06eb584699a13894c58f13d90021bfd08551055 SHA512 e8147530751dd02a238a0f041c1e89d52dd49e3914f2e5a578da2ae4b3fe06bac82ce58d20d80e32c25f58b04fbbf44e19a54087fe0446967bc59f2711cbdb04 WHIRLPOOL 4f4ca97f136e3e19d67bdc415b3bd8e117e654c29e963997f15e1f32881d417b85a5e08743e868840c9a452a7c079bed6f3bf3f3c3213ccfe35b3bc7b84dc53c
-EBUILD gimp-gmic-1.5.3.0.ebuild 949 SHA256 ca8ff7616daa72542b281f653a96eb06fe060b2dc5fd246ab0cb736cb10c0c1c SHA512 c297ebb21751f28625353183cf1d2a9b40221b177233a6bc319dbf42d5558ee957310de1d5a94bf4149004fa990a2f147e04717c0fd6895eb3f75c62283513e8 WHIRLPOOL e11ba2a0197bc99b9f36e6dd9eb99805bad4991f01251599d2c02b3e2df8cf44d6525d010bf722473eb4abff51b627b9d1372487c31905e10bca160de1bad1f5
-EBUILD gimp-gmic-1.5.4.0.ebuild 947 SHA256 141a34a291add1ee02f76b59436eb3eda0872f43fb1deaa0506a5d554443c35f SHA512 1bdb32532a9a37c7c5bd5ce436dd7f922e9113b543a2685746491086fc5f59c71507f1a54a28911a3a2740dddfa366b9053e29d8376a1d67325524b933a9c559 WHIRLPOOL 80c7a95326cdd226a308e7a9c4e753d318435606e551c3c4c7d25377c2d7693d1a23e43d3d28781f19be3993ebaa210decc5d5ea4c96368a70a37a4a020b2f4a
-EBUILD gimp-gmic-1.5.5.0.ebuild 947 SHA256 741e08537119f17d14be25a711dfa67d300a8156674dc1f352b14dd5d2cf5ca6 SHA512 b6603e41b2e68d6b057e61f93bf474b7fb06724568e60385966b4eec8f1adccc661898356f102fa55be867fc597de5163d9b88e24e491bcc67a8be16661dc44a WHIRLPOOL d5e46f224fd4adcdbed409440be175ad7bf86065fd79e31b153c3c00b42330582e47a14f60c59e723167b4965372c29bbaa1365020b1e145ea960317ae6619db
+DIST gmic_1.5.5.2.tar.gz 1683717 SHA256 4e1ff3dcd7dc79dcc7f8ac92cae49951854aea283751a83e90b9510de972382d SHA512 a0f2175aef8d93fa56bbc923793d59c716399231afedf391fcb1a9525ac2397ccb6ce1a542928f5c08d12ebd06af26ac5aec17fe7ae0d4c04e215bfac4ca586e WHIRLPOOL d59d4ab55b904ade2da5ab9ffb29329894cd3d8c009d5ed9f039b989f737502085e352f3a315cf1f287c60004a054e58955b2a189235497f70d25d48c48a2851
 EBUILD gimp-gmic-1.5.5.1.ebuild 947 SHA256 e773091ba937d2780f9b40a402b2a4b25dafcb74caca5f9104c13c4a2efdaf96 SHA512 ea01292f1075abb9f23583c1c7161bb171f25cb7fa62896f1f454be3b79e3854ada9c460ad82e27680020f221302fb99348e0c71e6b46600fc67ab68f8e74a03 WHIRLPOOL 61abb02f6a64d0bdc2088d6ded5bc03a33860669dfb0ef3252485c02468bcc85ca37195df86fd33588e4f9da5fd273120603f39c957ce31fbfdc185330247cdc
-MISC ChangeLog 4325 SHA256 ccc18d34946b7a228a3fe49088667850403d0898dd8e4b415df3f836ec8ccd20 SHA512 059efa27cd0a89d9f80d5692080054638e3991b8a9df9094344bf6bbb271dc88bdec828498c448bbe13a188c50cc7deb166aa4584a55c6ade97e2776dd4bb22e WHIRLPOOL fb956c9fcffc813190f24489c88ee1e5937477ce017fecc48ee5a66e3f4c366ec20f39e11109ec13a2151d7cb9ab0ca6971da43df79380a9f53ae8676a2d53ca
+EBUILD gimp-gmic-1.5.5.2.ebuild 947 SHA256 4e18a03297020544a4a2069760e2807195190b77aa06ef994cfd97a62f82f957 SHA512 e8f452069e433d7c0292ba06ea5082e296d7ff3025a8f002a8ece348531d7db02e84b79b6cb6966752b067d20b50d9a9c773c1e61b738462f3b8aea97d98a13c WHIRLPOOL 513730449ae6537d19eac521bbe4b9b860a515bd628488c0d5c2e6c959b4cf55f46b36a3c3c3974f678084eb074b124d6f50391ab5b3e5b4c2ae38a9bf57b021
+MISC ChangeLog 4684 SHA256 5dea094fa40c4b3797ba8caedfaf84f3d073191e5c343b4d7e3650429b9db26c SHA512 aeda95d51953012fbf4fa3f0d28f96f85292267ab9561e302a6b123d77c77565bc4d61057b9b0058155abbb2ad8c3e39b5be7da4634e951891d30041c6008d47 WHIRLPOOL 243cbb534d66977494864b73e91207740085f2ff69a3707e9df95d124252a9cadd3c149ed75f1bd3908271ac5509ce68e970068e7c0e04a8ed66bee98124c23d
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRVn4YAAoJEEqz6FtPBkyjJagH/3GetEbvawqvs3M4nPvhx4iM
-8QSU7oBHsZLMYHe01i3wDqZ9A1SkO0rDP7tNGUPPo9ClONypy3rtav9Wc3CfXZhM
-MfXBjQRxObRV5JaJrVkXBiosYqRFC/Iy1dvOKDZK3js8xQh5FoLu2fG09AvLhKMK
-c0unmeitfvSnE0fPzIot7UfBAA0OIiLaBrash+ZnUQSenTwEWHAKcq2sn4GwHOoK
-YfVLwNZWnTXqAdnVqIxIZdz/HRKiO4VzHOM3KfOlYVmbHbv3ng/X8vNBxRH8ZNCT
-3FceUDEOIifSljmm0+i6FYsf0HPaY9/NIPDTU4wsXmd2APhJSIPY6VXtR6uOFrc=
-=T6wQ
+iQEcBAEBCAAGBQJRg3oCAAoJEEqz6FtPBkyjYosH/iguH8ZFgrSSUccLPrCmrKBv
+TIyrC9zzxPj3FwbYXMKKU/JQRcnnje2of/b65JGZuQSHtWOvw8oJZj5PvLlppNN0
+fCdfhfrwpNmf4O7cUytpwP/ZPkZOidHZOPCC8UML4Gq7mxSc1EPR1H5aNA1UQk9W
+MUqTbK95b3LJMedFiz+7/vJ/29OC9KyYRGR66kAO8lBgj8giclowmnHiHF7sCS92
+knt9T/twz+sD9l0WpOc5SsklJ6YbHAz3zMmB0m9a8/AJofC6Vi07txNZ7ewtdOoL
+Z4wcy0uv85FdFEyq7yfmGpgAppE6+Gz0Zt3q//e3nGV6TB8J0FFWPL6zqkLntFk=
+=tm+C
 -----END PGP SIGNATURE-----
