@@ -1,6 +1,17 @@
 # ChangeLog for media-plugins/gimp-gmic
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-gmic/ChangeLog,v 1.29 2013/03/30 05:54:31 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-gmic/ChangeLog,v 1.31 2013/05/03 08:49:05 radhermit Exp $
+
+  03 May 2013; Tim Harder <radhermit@gentoo.org> -gimp-gmic-1.5.2.2.ebuild,
+  -gimp-gmic-1.5.2.4.ebuild, -gimp-gmic-1.5.2.5.ebuild,
+  -gimp-gmic-1.5.3.0.ebuild, -gimp-gmic-1.5.4.0.ebuild,
+  -gimp-gmic-1.5.5.0.ebuild:
+  Remove old.
+
+*gimp-gmic-1.5.5.2 (03 May 2013)
+
+  03 May 2013; Tim Harder <radhermit@gentoo.org> +gimp-gmic-1.5.5.2.ebuild:
+  Version bump.
 
 *gimp-gmic-1.5.5.1 (30 Mar 2013)
 
