@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/gmic
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gmic/ChangeLog,v 1.36 2013/05/03 08:38:54 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gmic/ChangeLog,v 1.37 2013/05/03 08:45:30 radhermit Exp $
+
+  03 May 2013; Tim Harder <radhermit@gentoo.org> -gmic-1.5.2.2.ebuild,
+  -files/gmic-1.5.2.2-makefile.patch, -gmic-1.5.2.4.ebuild,
+  -gmic-1.5.2.5.ebuild, -gmic-1.5.3.0.ebuild, -gmic-1.5.4.0.ebuild,
+  -gmic-1.5.5.0.ebuild:
+  Remove old.
 
 *gmic-1.5.5.2 (03 May 2013)
 
